--- a/Cinema/requirements.txt
+++ b/Cinema/requirements.txt
@@ -7,6 +7,8 @@ defusedxml==0.6.0
 Django==3.1.7
 django-allauth==0.44.0
 django-cors-headers==3.7.0
+django-filter==2.4.0
+django-rest-auth==0.9.5
 django-rest-knox==4.1.0
 djangorestframework==3.12.2
 idna==2.10
