--- a/Cinema/requirements.txt
+++ b/Cinema/requirements.txt
@@ -8,6 +8,7 @@ Django==3.1.7
 django-allauth==0.44.0
 django-cors-headers==3.7.0
 django-filter==2.4.0
+django-localflavor==3.0.1
 django-phone-field==1.8.1
 django-rest-auth==0.9.5
 django-rest-knox==4.1.0
@@ -16,6 +17,7 @@ idna==2.10
 oauthlib==3.1.0
 pycparser==2.20
 PyJWT==2.0.1
+python-stdnum==1.16
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
