--- a/Cinema/requirements.txt
+++ b/Cinema/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.6.0
 Django==3.1.7
 django-allauth==0.44.0
 django-cors-headers==3.7.0
+django-credit-cards==0.4.1
 django-filter==2.4.0
 django-localflavor==3.0.1
 django-money==1.3.1
