--- a/Cinema/requirements.txt
+++ b/Cinema/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.3.1
 blinker==1.4
 brotlipy==0.7.0
 certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1613247284136/work
-chardet @ file:///C:/ci/chardet_1607688753935/work
+cffi
+chardet
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.6
@@ -20,7 +20,8 @@ django-rest-auth==0.9.5
 django-rest-knox==4.1.0
 djangorestframework==3.12.2
 drf-yasg==1.20.0
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
+freeze==3.0
+idna
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.3
@@ -28,21 +29,21 @@ MarkupSafe==1.1.1
 oauthlib==3.1.0
 packaging==20.9
 py-moneyed==0.8.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-PyJWT @ file:///C:/ci/pyjwt_1610893228852/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
+pycparser
+PyJWT
+pyOpenSSL
 pyparsing==2.4.7
-PySocks @ file:///C:/ci/pysocks_1605287715206/work
+PySocks
 python-stdnum==1.16
 python3-openid==3.2.0
 pytz==2021.1
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
+requests
 requests-oauthlib==1.3.0
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
-six @ file:///C:/ci/six_1605199857265/work
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+six
+sqlparse
 uritemplate==3.0.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1611694770489/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605299180674/work
+urllib3
+win-inet-pton
 wincertstore==0.2
